test/users/brodtkorb/coercionQuestion.good
coercionQuestion.chpl:2: error: unresolved call '<=(1.1, 1)'
$CHPL_HOME/modules/standard/ChapelBase.chpl:154: note: candidates are: <=(a: int(32), b: int(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:155: note:                 <=(a: int(64), b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:156: note:                 <=(a: uint(32), b: uint(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:157: note:                 <=(a: uint(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:160: note:                 <=(a: string, b: string)
$CHPL_HOME/modules/standard/ChapelBase.chpl:186: note:                 <=(param a: int(32), param b: int(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:187: note:                 <=(param a: int(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:188: note:                 <=(param a: uint(32), param b: uint(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:189: note:                 <=(param a: uint(64), param b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:190: note:                 <=(param a: enumerated, param b: enumerated)
$CHPL_HOME/modules/standard/ChapelBase.chpl:191: note:                 <=(param a: string, param b: string)
$CHPL_HOME/modules/standard/ChapelBase.chpl:1473: note:                 <=(a: uint(64), b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1474: note:                 <=(a: int(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1477: note:                 <=(param a: uint(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1480: note:                 <=(param a: int(64), param b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1485: note:                 <=(a: uint(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1488: note:                 <=(param a: int(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelTuple.chpl:393: note:                 <=(a: _tuple, b: _tuple)
$CHPL_HOME/modules/standard/ChapelBase.chpl:158: note:                 <=(a: real(32), b: real(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:158: note:                 <=(a: real, b: real)
$CHPL_HOME/modules/standard/ChapelBase.chpl:159: note:                 <=(a: imag(32), b: imag(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:159: note:                 <=(a: imag, b: imag)
